--- a/styles/global.css
+++ b/styles/global.css
@@ -5,7 +5,6 @@
 }
 
 :root {
-    font-size: 62.5%;
     --font-family: 'Poppins', sans-serif;
     --text: 400
 
@@ -20,6 +19,6 @@
     --semantic-error: #dc2626;
 }   
 
-body {
-    font-size: 1.6rem;
+body {;
+    overflow: hidden;
 }
