--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,8 @@
 
 :root {
     --font-family: 'Poppins', sans-serif;
-    --text: 400
+    --text: 400 1rem/1.5 var(--font-family);
+    --text-sm: 400 0.875rem/1.4var(--font-family);
 
     --text-primary: #292524;
     --text-secondary: #57534e;
@@ -19,6 +20,17 @@
     --semantic-error: #dc2626;
 }   
 
-body {;
+body {
     overflow: hidden;
+    font: var(--text);
+    color: var(--text-secondary);
+}
+
+h1, h2 {
+    color: var(--text-primary);
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
