--- a/styles/global.css
+++ b/styles/global.css
@@ -16,7 +16,7 @@
     --surface-primary: #ffffff;
     --surface-secondary: #fee7d6;
     --stroke-default: #d6d3d1;
-    --stroke-hightliht: #f3541c;
+    --stroke-highlight: #f3541c;
     --semantic-error: #dc2626;
 }   
 
